--- a/css/style.css
+++ b/css/style.css
@@ -1376,7 +1376,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   background: #efefef;
   font-size: 14px;
   color: #888;
-  padding: 70px 0; }
+  padding: 0 0; }
   .site-footer a {
     color: #96bb7c;
     position: relative;
